--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "@tailwindcss/forms": "^0.5.4",
+        "@tailwindcss/typography": "^0.5.9",
+        "alpinejs": "^3.8",
+        "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.27",
+        "resolve-url-loader": "^3.1",
+        "sass": "^1.3",
+        "sass-loader": "^8.0",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     }
 }
