--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          echo "Starting deployment..."
+          echo "Starting deployment...."
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519_deploy ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} <<EOF
             echo "Inside SSH session..."
             cd /var/www/toddchristensen.net
