--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519_deploy ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} <<EOF
             echo "Inside SSH session..."
             cd /var/www/toddchristensen.net
-            echo "Changed directory to project..."
+            echo "Changed directory to project.."
             git pull origin main
             echo "Pulled latest code..."
             composer install
